--- a/index.html
+++ b/index.html
@@ -1,13 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-1</title>
     <link rel="stylesheet" href="/style.css">
+    <script src="https://kit.fontawesome.com/d29a20b3f7.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <h1>Hello</h1>
+    <header>
+        <div>
+            <h2 class="title">All Thinks Are <br> Possible If You <br> believe</h2>
+            <p class="title-discription">here are many variations of passages of Lorem Ipsum <br> available, but the
+                majority have suffered alteration in some <br> form, by injected humour, or randomised words</p>
+            <button class="contact">Contact Us</button>
+        </div>
+    </header>
+
+    <div class="main">
+        <div class="main-right">
+            <img src="/images/person.png" alt="">
+        </div>
+        <div>
+            <h4 class="main-lift">My failures of <br>
+                previous year</h4>
+            <p class="main-discrip">Contrary to popular belief, Lorem Ipsum is not <br> simply random text. It has roots
+                in a piece of <br>classical Latin literature from 45 BC, making it over <br> 2000 years old. Richard
+                McClintock.</p>
+
+            <ol>
+                <li class="main-conditon"><i class="fa-solid fa-check"></i>Contrary to popular belief, is not simply.
+                </li>
+                <li class="main-conditon"><i class="fa-solid fa-check"></i>Contrary to popular belief.</li>
+                <li class="main-conditon"><i class="fa-solid fa-check"></i>Contrary to popular , is not simply.</li>
+                <li class="main-conditon"><i class="fa-solid fa-check"></i>Contrary to popular belief, is not simply.
+                </li>
+                <li class="main-conditon"><i class="fa-solid fa-check"></i>Contrary to popular simply.</li>
+            </ol>
+
+        </div>
+    </div>
+    <div class="Plans">
+        <h2>My Plans</h2>
+    </div>
+    <div class="want">
+        <div class="icon"><img src="/images/icons/web.png">
+            <h3 class="topic">Web Development</h3>
+            <p>I want to start</p>
+        </div>
+        <div class="icon"><img src="/images/icons/js.png">
+            <h3 class="topic">Javascript</h3>
+            <p>I want to learn</p>
+        </div>
+        <div class="icon"><img src="/images/icons/smoke.png">
+            <h3 class="topic">Smoking Habit</h3>
+            <p>I want to end</p>
+        </div>
+        <div class="icon"><img src="/images/icons/ecom.png">
+            <h3 class="topic">ecommerce</h3>
+            <p>I want to develop</p>
+        </div>
+    </div>
+    <div class="banner">
+        <div class="banner-title">
+            <h5>Awlays keep a positive <br> mindset</h5>
+        </div>
+        <button class="call-now">Call Now</button>
+
+    </div>
+    <div class="footer">
+        <div class="footer-right">
+            <div class="footer-right-title">
+                <h3>Future</h3>
+            </div>
+            <div class="footer-right-dispctiop">
+                <p>There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered
+                    alteration in some <br> form, by injected humour, or randomised words <br>
+                    Email : info@gmail.com
+                    <br>Phone : 01500 00 00 00
+                </p>
+                <img class="icon-socal" src="/images/icons/fb.png" alt="">
+                <img class="icon-socal" src="/images/icons/twitter.png" alt="">
+                <img class="icon-socal" src="/images/icons/youtube.png" alt="">
+            </div>
+        </div>
+        <div class="footer-left">
+            <div class="footer-left-titile">
+                <h3>Subscribe</h3>
+            </div>
+            <div class="input">
+                <input type="email" name="" id="">
+            </div>
+            <div class="subcrip">
+                <button type="submit">Subscribe</button>
+            </div>
+
+        </div>
+    </div>
 </body>
+
 </html>
