--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="main">
         <div class="main-right">
-            <img src="/images/person.png" alt="">
+            <img src="./images/person.png" alt="">
         </div>
         <div>
             <h4 class="main-lift">My failures of <br>
@@ -47,7 +47,7 @@
         <h2>My Plans</h2>
     </div>
     <div class="want">
-        <div class="icon"><img src="/images/icons/web.png">
+        <div class="icon"><img src="./images/icons/web.png">
             <h3 class="topic">Web Development</h3>
             <p>I want to start</p>
         </div>
