--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-1</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
     <script src="https://kit.fontawesome.com/d29a20b3f7.js" crossorigin="anonymous"></script>
 </head>
 
@@ -51,15 +51,15 @@
             <h3 class="topic">Web Development</h3>
             <p>I want to start</p>
         </div>
-        <div class="icon"><img src="/images/icons/js.png">
+        <div class="icon"><img src="./images/icons/js.png">
             <h3 class="topic">Javascript</h3>
             <p>I want to learn</p>
         </div>
-        <div class="icon"><img src="/images/icons/smoke.png">
+        <div class="icon"><img src="./images/icons/smoke.png">
             <h3 class="topic">Smoking Habit</h3>
             <p>I want to end</p>
         </div>
-        <div class="icon"><img src="/images/icons/ecom.png">
+        <div class="icon"><img src="./images/icons/ecom.png">
             <h3 class="topic">ecommerce</h3>
             <p>I want to develop</p>
         </div>
