--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
                     Email : info@gmail.com
                     <br>Phone : 01500 00 00 00
                 </p>
-                <img class="icon-socal" src="/images/icons/fb.png" alt="">
-                <img class="icon-socal" src="/images/icons/twitter.png" alt="">
-                <img class="icon-socal" src="/images/icons/youtube.png" alt="">
+                <img class="icon-socal" src="./images/icons/fb.png" alt="">
+                <img class="icon-socal" src="./images/icons/twitter.png" alt="">
+                <img class="icon-socal" src="./images/icons/youtube.png" alt="">
             </div>
         </div>
         <div class="footer-left">
